# syncraft

./: .bumpversion.toml  bumpversion.cfg  pyproject.toml  try.py
scripts/: release.sh
