[project]
name = "syncraft"
version = "0.1.5"
description = "Parser combinator library"
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
authors = [{name = "Michael Afmokt", email = "michael@esacca.com"}]
keywords = ["parser", "combinator", "sql", "sqlite", "generator", 'printer']
requires-python = ">=3.8"
dependencies = [
    "rich>=14.1.0",
    "rstr>=3.2.2",
    "sqlglot>=27.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[tool.hatch.version]
path = "pyproject.toml" 

